--- a/dice game/styles.css
+++ b/dice game/styles.css
@@ -13,6 +13,22 @@
   font-size: 3rem;
 }
 
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+a:active {
+  text-decoration: none;
+}
+
 body {
   background-color: #393E46;
 }
